# opened_extraction

./: .gitignore
llvm-tools/: CMakeLists.txt  README.md
llvm-tools/equivalence-check-pass/: CMakeLists.txt  EquivalenceCheckPass.cpp  EquivalenceCheckPass.h
llvm-tools/equivalence-check-tool/: CMakeLists.txt  EquivalenceCheck.cpp
llvm-tools/test-programs/: balancer_kern.ll  prova.json
